Grid group row expand/collapse glyph alignment fixes (cont.)
+ Fixing earlier fix.

--- a/cmp/ag-grid/AgGrid.scss
+++ b/cmp/ag-grid/AgGrid.scss
@@ -179,6 +179,25 @@
     }
   }
 
+  //------------------------
+  // Tree Mode
+  //------------------------
+  .xh-grid--hierarchical & {
+
+    // Remove extra left margin (added above to non-tree/full-width group rows). In tree grids,
+    // this will cause horizontal mis-alignment between expandable and non-expandable sibling rows
+    // (and in general tighter padding preferred here vs. full-width groups).
+    .ag-row {
+      .group-header-icon-expanded {
+        margin: 0 var(--xh-pad-half-px) 0 0;
+      }
+
+      .group-header-icon-contracted {
+        margin: 0 var(--xh-pad-half-px) 0 0;
+      }
+    }
+  }
+
 
   //------------------------
   // Other Optional Modifiers + Overrides
